--- a/package.json
+++ b/package.json
@@ -39,8 +39,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "electron-squirrel-startup": "^1.0.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
+    "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.8"
   }
 }
