--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.0.0",
     "electron": "29.2.0",
+    "electron-hot-reload": "^0.1.4",
+    "electron-reload": "^2.0.0-alpha.1",
     "node-loader": "^2.0.0",
     "style-loader": "^3.0.0"
   },
