updated form to modal form

--- a/package.json
+++ b/package.json
@@ -11,17 +11,24 @@
     "@fullcalendar/react": "^6.1.11",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-data-grid": "^5.17.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
     "formik": "^2.4.5",
+    "formik-material-ui": "^4.0.0-alpha.2",
     "primereact": "^10.6.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
+    "react-dom": "^18.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "react-window": "^1.8.10",
+    "scheduler": "^0.23.2",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
