--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.3",
     "formik": "^2.4.5",
     "formik-material-ui": "^4.0.0-alpha.2",
+    "material-ui-search-bar": "^1.0.1",
     "primereact": "^10.6.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
