--- a/package.json
+++ b/package.json
@@ -16,14 +16,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.3",
-    "formik": "^2.4.5",
     "formik-material-ui": "^4.0.0-alpha.2",
+    "install": "^0.13.0",
     "material-ui-search-bar": "^1.0.1",
     "primereact": "^10.6.3",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
@@ -33,6 +29,10 @@
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
+  "resolutions": {
+  "react": "^16.8.0",
+  "react-dom": "^16.8.0"
+},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
