--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@testing-library/user-event": "^13.5.0",
     "formik-material-ui": "^4.0.0-alpha.2",
     "install": "^0.13.0",
-    "material-ui-search-bar": "^1.0.1",
     "primereact": "^10.6.3",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.8.0",
     "react-window": "^1.8.10",
     "scheduler": "^0.23.2",
     "styled-components": "^6.1.8",
@@ -30,9 +30,9 @@
     "yup": "^1.4.0"
   },
   "resolutions": {
-  "react": "^16.8.0",
-  "react-dom": "^16.8.0"
-},
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
