--- a/package.json
+++ b/package.json
@@ -39,15 +39,6 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@reduxjs/toolkit": "^2.2.3",
-    "electron-squirrel-startup": "^1.0.0",
-    "jwt-decode": "^4.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3",
-    "react-scripts": "^5.0.1",
-    "react-spinners": "^0.13.8",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -57,12 +48,22 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/x-data-grid": "^5.17.2",
+    "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "electron-squirrel-startup": "^1.0.0",
     "formik": "^2.4.5",
+    "jwt-decode": "^4.0.0",
+    "notistack": "^3.0.1",
     "primereact": "^10.6.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
+    "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "yup": "^1.4.0"
   }
 }
