--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.13.8",
+    "xlsx": "^0.18.5",
     "yup": "^1.4.0"
   }
 }
