--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "date-fns": "^3.6.0",
     "electron-squirrel-startup": "^1.0.0",
     "formik": "^2.4.5",
     "jspdf": "^2.5.1",
