--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "notistack": "^3.0.1",
     "primereact": "^10.6.3",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-pro-sidebar": "^0.7.1",
     "react-redux": "^9.1.0",
